# PasswordManager

./: README.md  auto_completer.py  crypter.py  key_generation_key_manager.py  password_generator.py  password_manager.py  preference_manager.py  pyproject.toml  setting.py  settings_manager.py
.github/workflows/: lint_code.yaml
src/password_manager/: __main__.py  packer.py  password_manager.py
